# neet-content-collector

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: collect.yml
dashboard/: package-lock.json  package.json
dashboard/src/components/: Dashboard.tsx
data/: README.md
docs/: dashboard-design.md
src/neet_collector/: __init__.py  __main__.py  ai_analysis.py  collector.py  config.py  database.py  deduplication.py  exporter.py  relevance.py
tests/: __init__.py  test_collector_parsing.py  test_config.py  test_deduplication.py  test_relevance.py
